add_executable (i2c_HMC5883L i2c_HMC5883L.c)
add_executable (hellomaa hellomaa.c)
add_executable (cycle-pwm3 cycle-pwm3.c)
add_executable (blink-io8 blink-io8.c)
add_executable (analogin_a0 analogin_a0.c)
add_executable (isr_pin6 isr_pin6.c)

include_directories(${PROJECT_SOURCE_DIR}/api ${PROJECT_SOURCE_DIR}/include)

target_link_libraries (hellomaa maa ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries (i2c_HMC5883L maa m ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries (cycle-pwm3 maa ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries (blink-io8 maa ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries (analogin_a0 maa ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries (isr_pin6 maa ${CMAKE_THREAD_LIBS_INIT})
